--- a/contact.html
+++ b/contact.html
@@ -610,7 +610,7 @@ header {
   
         <div class="info-block">
           <h4>📍 Location</h4>
-          <p>Hyderabad</p>
+          <p>Praneeth Homes Plot No:16 1st floor Near mallampet ORR Exist No:4A, mallampet Medchel Malkajgiri District,500090</p>
         </div>
   
         <div class="info-block">
