--- a/bookconsultancy.html
+++ b/bookconsultancy.html
@@ -121,8 +121,8 @@
         }
     
         .logo-image {
-            width: 130px;
-            height: auto;
+            width: 180px;
+            height: 150px;
         }
     
         .footer-icons h4 {
@@ -262,7 +262,7 @@
         <p>Let's design a space you will love to live or work in</p>
 
         <div class="logo">
-            <img src="img/B square-logo.jpg" alt="logo" class="logo-image">
+            <img src="img/bsquare-logo.png" alt="logo" class="logo-image">
         </div>
         <div class="footer-icons">
             <h4>Follow Us On</h4>
