--- a/contact.html
+++ b/contact.html
@@ -520,8 +520,8 @@ header {
   <header>
     <div class="navbar">
         <div class="logo">
-            <img src="img/B square-logo.jpg" alt="logo" class="logo-image">
-            <p class="logo-text"><b>B SQUARE INTERIORS</b></p>
+            <img src="img/b-square-logo.png" alt="logo" class="logo-image">
+            <p class="logo-text"><b>B-SQUARE INTERIORS</b></p>
         </div>
     
     <div class="hamburger" onclick="toggleMenu()" aria-label="menu">
@@ -531,6 +531,7 @@ header {
         <a class="a-element" href="index.html">Home</a>
         <a class="a-element" href="aboutus.html">about</a>
         <a class="a-element" href="index.html">services</a>
+        <a class="a-element" href="projects.html">projects</a>
 
         <div class="dropdown" id="brandsDropdown">
           <button class="a-element" id="brandsBtn" aria-haspopup="true" aria-expanded="false">
@@ -610,7 +611,7 @@ header {
   
         <div class="info-block">
           <h4>📍 Location</h4>
-          <p>Praneeth Homes Plot No:16 1st floor Near mallampet ORR Exist No:4A, mallampet Medchel Malkajgiri District,500090</p>
+          <p>Hyderabad</p>
         </div>
   
         <div class="info-block">
@@ -672,6 +673,7 @@ header {
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html">about</a></li>
             <li><a href="index.html">services</a></li>
+            <li> <a href="projects.html">projects</a></li>
             <li><a href="#contacts">Contacts</a></li>
           </ul>
       </div>
@@ -681,7 +683,7 @@ header {
        <!-- Contact Info -->
     <div class="footer-box">
       <h4>Contact Info</h4>
-      <p><i class="fas fa-phone"></i> 7396971741</p>
+      <p><i class="fas fa-phone"></i> 7396971741 / 9121571741</p>
       <p><i class="fab fa-instagram"></i> @b_square_interiors_</p>
       <p><i class="fas fa-location-dot"></i> Praneeth Homes Plot No:16 1st floor Near mallampet ORR Exist No:4A, mallampet Medchel Malkajgiri District,500090</p>
     </div>
