--- a/livingroom.html
+++ b/livingroom.html
@@ -235,8 +235,8 @@
       <a href="img/interior-design 3.jpeg" target="_blank">
         <img src="img/interior-design 3.jpeg" alt="living-room-design 3">
       </a>
-      <a href="img/interior-design 1.jpeg" target="_blank">
-        <img src="img/interior-design 1.jpeg" alt="living-room-design 4">
+      <a href="img/interior-design 4 (2).jpeg" target="_blank">
+        <img src="img/interior-design 4 (2).jpeg" alt="living-room-design 4">
       </a>
     </div>
     
