--- a/aboutus.html
+++ b/aboutus.html
@@ -458,6 +458,12 @@ section {
   color: #555;
   margin-bottom: 15px;
 }
+@media (max-width: 1024px) {
+  .director-bio .bio-info {
+    margin-top: 20px;
+    text-align:justify;
+  }
+} 
 /* Mobile View: Stack vertically */
 @media (max-width: 768px) {
   .section-heading h2{
