--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@ header {
 
 .a-element {
   text-decoration: none;
-  color:rgb(44, 145, 179);
+  color:rgb(44, 145, 179); 
   padding: 10px 10px;
   font-size: 18px;
   
@@ -139,13 +139,13 @@ header {
 
 
 
-/* Responsive for Tablets*/
+
 /* Responsive for tablets and mobile */
 @media (max-width: 1024px) {
   .hamburger {
     display: block;
     font-size: 22px;
-    color: #0a0a0a;
+    color: #000000;
     background: none;
     border: none;
     cursor: pointer;
@@ -156,7 +156,7 @@ header {
     height: auto;
   }
   .logo-text {
-    font-size: 16px;
+    font-size: 15px;
   }
 
   .navbar-links {
@@ -240,7 +240,7 @@ header {
 
 
 }
-     
+        
 
 /*contact us */
 
