--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="navbar-links" id="navlinks" >
             <a class="a-element" href="#Home">Home</a>
             <a class="a-element" href="aboutus.html">about us</a>
-            <a class="a-element" href="#services">services</a>
+            <a class="a-element" href="index.html#services">services</a>
             <a class="a-element" href="projects.html">projects</a>
 
             <div class="dropdown" id="brandsDropdown">
@@ -99,7 +99,8 @@
     </div>
  
 <!--service-section-->
- <div class="wrap">
+
+ <section class="wrap" id="services">
     <div class="hero">
       <h1>services</h1>
       <p>Professional interior and construction solutions for every space</p>
@@ -165,7 +166,7 @@
      
 
     </div>
-  </div>
+  </section>
 
 
  <!--Why use us-->
