--- a/bookconsultancy.html
+++ b/bookconsultancy.html
@@ -262,7 +262,7 @@
         <p>Let's design a space you will love to live or work in</p>
 
         <div class="logo">
-            <img src="img/bsquare-logo.png" alt="logo" class="logo-image">
+            <img src="img/Bsquare logo.png" alt="logo" class="logo-image">
         </div>
         <div class="footer-icons">
             <h4>Follow Us On</h4>
